[package]
name = "wtl-rs"
version = "0.1.1"
authors = ["varding <https://github.com/varding>"]

[lib]
name = "wtl"
path = "src/lib.rs"

[dependencies]
winapi       = {version = "*",path = "./pkg/winapi"}
user32-sys   = {version = "*",path = "./pkg/winapi/lib/user32-sys"}
kernel32-sys = {version = "*",path = "./pkg/winapi/lib/kernel32-sys"}
shell32-sys  = {version = "*",path = "./pkg/winapi/lib/shell32-sys"}
gdi32-sys    = {version = "*",path = "./pkg/winapi/lib/gdi32-sys"}
#rand = "*"