[package]
name = "winapi"
version = "0.2.2"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "Types and constants for WinAPI bindings. See README for list of crates providing function bindings."
documentation = "https://retep998.github.io/doc/winapi/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["Windows", "FFI", "WinSDK"]
license = "MIT"
[dev-dependencies]
kernel32 = { version = "*", path = "../kernel32" }
user32 = { version = "*", path = "../user32" }
shell32 = { version = "*", path = "../shell32" }