[package]
name = "hello-dialog"
version = "0.1.0"
authors = ["varding <https://github.com/varding>"]
build = "build.rs"

[[bin]]
name = "hello-dialog"
path = "src/main.rs"

[dependencies]
winapi = {version = "*",path = "../../winapi"}
user32 = {version = "*",path = "../../user32"}
kernel32={version = "*",path = "../../kernel32"}
shell32={version = "*",path = "../../shell32"}
wtl = {version = "*",path = "../../wtl"}
trace = {version = "*",path = "../../trace"}
rand = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1