[package]
name = "hello-dialog"
version = "0.1.0"
authors = ["varding <https://github.com/varding>"]
build = "build.rs"

[[bin]]
name = "hello-dialog"
path = "src/main.rs"

[dependencies]
winapi       = {version = "*",path = "../../pkg/winapi"}
user32-sys   = {version = "*",path = "../../pkg/winapi/lib/user32-sys"}
kernel32-sys = {version = "*",path = "../../pkg/winapi/lib/kernel32-sys"}
shell32-sys  = {version = "*",path = "../../pkg/winapi/lib/shell32-sys"}
wtl-rs       = {version = "*",path = "../../"}
#trace = "*"


[profile.release]
#opt-level = 3
debug = false
rpath = false
#lto = false
debug-assertions = false
codegen-units = 1